--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.2.5
   flutter_slidable: ^3.0.1
   firebase_messaging: ^15.2.10
+  flutter_local_notifications: ^17.2.3
   crypto: ^3.0.7
 
 dev_dependencies:
