--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_messaging: ^15.2.10
   flutter_local_notifications: ^17.2.3
   crypto: ^3.0.7
+  google_fonts: ^8.0.0
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
